--- a/css/styles.css
+++ b/css/styles.css
@@ -5801,7 +5801,21 @@ a.close.disabled {
 }
 
 .carousel {
-  position: relative;
+  /*position: relative; */
+  display: block;
+  margin-left: auto;
+  margin-right: auto }
+}
+
+div.c-wrapper{
+    width: 80%; /* for example */
+    margin: auto;
+}
+
+.carousel-inner > .item > img,
+.carousel-inner > .item > a > img{
+  width: 100%; /* use this, or not */
+  margin: auto;
 }
 
 .carousel.pointer-event {
@@ -5825,6 +5839,7 @@ a.close.disabled {
   float: left;
   width: 100%;
   margin-right: -100%;
+  object-fit: fill;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   transition: transform 0.6s ease-in-out;
@@ -5977,6 +5992,7 @@ a.close.disabled {
   padding-bottom: 20px;
   color: #fff;
   text-align: center;
+  background-color: rgba(46, 49, 49, 0.55);
 }
 
 @-webkit-keyframes spinner-border {
@@ -6062,7 +6078,7 @@ a.close.disabled {
   vertical-align: text-bottom !important;
 }
 
-.align-text-top {
+.align-carouseltext-top {
   vertical-align: text-top !important;
 }
 
